# datathon-educacao-passos-magicos

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.hf  README.md  docker-compose.yml  nginx.conf  pyproject.toml  railway.json  requirements.txt  requirements_hf.txt  run_training.py  supervisord.conf
.github/workflows/: ci.yml
api/: __init__.py  main.py  routes.py  schemas.py
docs/: GUIA_API.md
models/: evaluation_report.json  model.joblib  pipeline.joblib
monitoring/: __init__.py  dashboard.py
notebooks/: 01_EDA.ipynb  02_Pipeline_ML.ipynb  03_Avaliacao_Modelo.ipynb
scripts/: setup_supabase.sql
src/: __init__.py  evaluate.py  feature_engineering.py  monitoring.py  predict.py  preprocessing.py  train.py  utils.py
streamlit_app/: api_client.py  app.py
streamlit_app/pages/: 1_Analise_Exploratoria.py  2_Modelo_Preditivo.py  3_Performance.py
tests/: __init__.py  conftest.py  test_api.py  test_evaluate.py  test_feature_engineering.py  test_integration.py  test_monitoring.py  test_predict.py  test_preprocessing.py  test_train.py  test_utils.py
